CHANGES IN VERSION 1.9.1-1.9.2
-------------------------

    o new functions `snpgdsAdmixPlot()` and `snpgdsAdmixTable()`

    o `snpgdsPCASNPLoading()` and `snpgdsPCASampLoading()` support the eigen
      results of `snpgdsEIGMIX()` allowing projecting new samples to the
      existing coordinate


CHANGES IN VERSION 1.8.0
-------------------------

    o the version number was bumped for the Bioconductor release version 3.4


CHANGES IN VERSION 1.7.0-1.7.5
-------------------------

    o the version number was bumped for the Bioconductor develop version 3.4

    o add a new function `snpgdsIndivBeta()`


CHANGES IN VERSION 1.6.0-1.6.6
-------------------------

    o the version number was bumped for the Bioconductor release version 3.3

    o new implement of thread pool

    o bitwise intrinsics (SSE2/AVX2) to accelerate `snpgdsIBSNum()`,
      `snpgdsIBS()`, `snpgdsIBDMoM()`, `snpgdsIBDKing()` (+50% to +300%)

    o v1.6.4: bug fix in v1.6.3 (allele counting error with SSE2 implement)

    o v1.6.5: `snpgdsGRM()`, renames the option "Visscher" to "GCTA",
      new option 'dosage' in `snpgdsPairScore()`,
      new function `plot.snpgdsPCAClass()`


CHANGES IN VERSION 1.5.0-1.5.2
-------------------------

    o fix an issue in `snpgdsVCF2GDS()` if sample.id has white space

    o bug fix in `snpgdsPCASampLoading()` when the input is SeqArray GDS file

    o improve `snpgdsGetGeno()`


CHANGES IN VERSION 1.4.0
-------------------------

    o the version number was bumped for the Bioconductor release version 3.2


CHANGES IN VERSION 1.3.0-1.3.11
-------------------------

    o update GENEVA website address

    o add a new function `snpgdsPairScore()`

    o improve `snpgdsGRM()`

    o support the SeqArray data format (requiring SeqArray >= v1.9.2)

    o modification according to gdsfmt_1.5.7

    o bug fix in `snpgdsLDMat()` when genotype data are from SeqArray

    o bug fix: https://github.com/zhengxwen/SNPRelate/issues/14
