@@ -547,7 +547,7 @@ snpgdsGRM <- function(gdsobj, sample.id=NULL, snp.id=NULL,
 # F_st estimation
 #
 
-.paramFst <- function(sample.id, population, method=c("W&H02", "W&C84"), ws)
+.paramFst <- function(sample.id, population, method=c("W&C84", "W&H02"), ws)
 {
     method <- match.arg(method)
     stopifnot(is.factor(population))
@@ -576,6 +576,10 @@ snpgdsGRM <- function(gdsobj, sample.id=NULL, snp.id=NULL,
 
     if (ws$verbose)
     {
+        if (method == "W&C84")
+            cat("Method: Weir & Cockerham, 1984\n")
+        else
+            cat("Method: Weir & Hill, 2002\n")
         x <- table(population)
         cat("# of Populations: ", nlevels(population), "\n    ",
             paste(sprintf("%s (%d)", names(x), x), collapse=", "),
@@ -585,7 +589,7 @@ snpgdsGRM <- function(gdsobj, sample.id=NULL, snp.id=NULL,
     list(population=population, npop=nlevels(population), method=method)
 }
 
-snpgdsFst <- function(gdsobj, population, method=c("W&H02", "W&C84"),
+snpgdsFst <- function(gdsobj, population, method=c("W&C84", "W&H02"),
     sample.id=NULL, snp.id=NULL, autosome.only=TRUE, remove.monosnp=TRUE,
     maf=NaN, missing.rate=NaN, with.id=FALSE, verbose=TRUE)
 {
@@ -604,16 +608,20 @@ snpgdsFst <- function(gdsobj, population, method=c("W&H02", "W&C84"),
     d <- .Call(gnrFst, v$population, v$npop, v$method)
 
     # return
-    rv <- if (with.id)
-        list(sample.id=ws$sample.id, snp.id=ws$snp.id)
+    if (with.id)
+        rv <- list(sample.id=ws$sample.id, snp.id=ws$snp.id)
     else
-        list()
+        rv <- list()
     rv$Fst <- d[[1L]]
-    if (method == "W&H02")
+    if (method == "W&C84")
     {
+        rv$MeanFst <- d[[2L]]
+        rv$FstSNP <- d[[3L]]
+    } else {
         rv$Beta <- d[[2L]]
         colnames(rv$Beta) <- rownames(rv$Beta) <- levels(population)
     }
+
     rv
 }
 
